syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos";

enum Currency {
  CURRENCY_NONE = 0;
  CURRENCY_MONEY = 1;
  CURRENCY_TOKEN = 2;
  CURRENCY_ALL = -1;
}

enum TransactionType {
  TRANSACTION_TYPE_NONE = 0;
  TRANSACTION_TYPE_DEPOSIT = 1;
  TRANSACTION_TYPE_REWARD = 2;
  TRANSACTION_TYPE_CHARGE = 4;
  TRANSACTION_TYPE_PAYOUT = 8;
  TRANSACTION_TYPE_WITHDRAWAL = 16;
  TRANSACTION_TYPE_ALL = -1;
}

enum TransactionStatus {
  TRANSACTION_STATUS_NONE = 0;
  TRANSACTION_STATUS_PENDING = 1;
  TRANSACTION_STATUS_SUCCEDED = 2;
  TRANSACTION_STATUS_FAILED = 4;
  TRANSACTION_STATUS_CANCELED = 8;
  TRANSACTION_STATUS_ALL = -1;
}